objects/Producer_Group_Association__c.object
<CustomObject>
    <description>Producer and Group associations will be stored using this object</description>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Effective Date of the Association (Relationship between Group Account and Producer Account)</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date of the Association (Relationship between Group Account and Producer Account)</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>Stores the external ID from Source System (Concat of Group Account # and Producer Account #) for Upsert Operation</description>
        <externalId>true</externalId>
        <label>PGA External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Group_Account__c</fullName>
        <description>Stores the group account related in this association</description>
        <label>Group Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Group Account</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Prospect</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Prospect (Non BlueSTAR)</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Group Account (Non BlueSTAR)</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Producers Associated to Group</relationshipLabel>
        <relationshipName>Group_Associated</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <description>Formula field to retrieve the Group Account Number for the Group Account</description>
        <formula>Group_Account__r.External_ID__c</formula>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Source__c</fullName>
        <description>This will be used during migrations to identify the source</description>
        <label>Migration Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Primary Producer Account of the Group Account</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Producer_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Producer Account related in the association</description>
        <label>Producer Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Producer_Account</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Consultant_Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Groups Associated to Producer</relationshipLabel>
        <relationshipName>Producer_Association</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_Number__c</fullName>
        <description>Formula field to retrieve the Producer Account Number for the Producer Account</description>
        <formula>Producer_Account__r.External_ID__c</formula>
        <label>Producer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Organization__c</fullName>
        <formula>Producer_Account__r.Producer_Organization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Producer Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Tax_ID__c</fullName>
        <description>Formula Field to retrieve the Producer Tax ID for the Producer Account</description>
        <formula>Producer_Account__r.Tax_ID__c</formula>
        <label>Producer Tax ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Producer_Type__c</fullName>
        <description>Formula field to retrieve the Producer Type for the Producer Account</description>
        <formula>TEXT(Producer_Account__r.Type)</formula>
        <label>Producer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenure__c</fullName>
        <formula>IF( End_Date__c &lt;&gt; null,  End_Date__c -  Effective_Date__c , TODAY() - Effective_Date__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tenure</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Producer Group Association</label>
    <nameField>
        <displayFormat>PAG-{0000}</displayFormat>
        <label>PAG #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Producer Group Associations</pluralLabel>
    <recordTypes>
        <fullName>Draft</fullName>
        <active>true</active>
        <description>This recordtype will be used by users to create producer group association between Prospects and Producers</description>
        <label>Draft</label>
    </recordTypes>
    <recordTypes>
        <fullName>Final</fullName>
        <active>true</active>
        <description>This recordtype will be used by users to create producer group association between Group Accounts and Producers</description>
        <label>Final</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>